--- a/pom.xml
+++ b/pom.xml
@@ -257,7 +257,17 @@
 			    <version>3.1</version>
 			</dependency>
 			<!-- httpclient -->
-
+			<!-- ehcache -->
+			<dependency>
+				<groupId>net.sf.ehcache</groupId>
+				<artifactId>ehcache-core</artifactId>
+				<version>2.6.9</version>
+			</dependency>
+			<dependency>
+				<groupId>nl.bitwalker</groupId>
+				<artifactId>UserAgentUtils</artifactId>
+				<version>1.2.4</version>
+			</dependency>
 			<!-- json -->
 			<dependency>
 			    <groupId>com.google.code.gson</groupId>
